Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Pennaction : Penn Action Dataset, with human body joints for all frames!" />
+    <meta name="description" content="Penn Action : Action Dataset, with human body joints for all frames!" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Pennaction</title>
+    <title>Penn Action</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dreamdragon/PennAction">View on GitHub</a>
 
-          <h1 id="project_title">Pennaction</h1>
-          <h2 id="project_tagline">Penn Action Dataset, with human body joints for all frames!</h2>
+          <h1 id="project_title">Penn Action</h1>
+          <h2 id="project_tagline">Action Dataset, with human body joints for all frames!</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/dreamdragon/PennAction/zipball/master">Download this project as a .zip file</a>
@@ -34,10 +34,10 @@
         <h2>
 <a name="introducing-penn-action-dataset" class="anchor" href="#introducing-penn-action-dataset"><span class="octicon octicon-link"></span></a>Introducing Penn Action Dataset</h2>
 
-<p>Penn Action Dataset contains 2326 video sequences of 15 
-different actions and human joint annotations for each 
-sequence. The dataset is available for download via the
-following link:</p>
+<p>Penn Action Dataset (University of Pennsylvania) contains 
+2326 video sequences of 15 different actions and human 
+joint annotations for each sequence. The dataset is 
+available for download via the following link:</p>
 
 <p><a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
 
@@ -46,10 +46,9 @@ following link:</p>
 
 <p>If you use our dataset, please cite the following paper:</p>
 
-<pre><code>Weiyu Zhang, Menglong Zhu, Kosta Derpanis,  "From Actemes 
-to Action: A Strongly-supervised Representation for Detailed 
-Action Understanding" International Conference on Computer 
-Vision (ICCV). Dec 2013.
+<pre><code>Weiyu Zhang, Menglong Zhu, Kosta Derpanis,  "From Actemes to Action: 
+A Strongly-supervised Representation for Detailed Action Understanding"
+International Conference on Computer Vision (ICCV). Dec 2013.
 </code></pre>
 
 <h2>
@@ -126,7 +125,7 @@ for more details.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Pennaction maintained by <a href="https://github.com/dreamdragon">dreamdragon</a></p>
+        <p class="copyright">Penn Action maintained by <a href="https://github.com/dreamdragon">dreamdragon</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
