Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@ for more details.</p>
 
 <p>Please direct any questions regarding the dataset to</p>
 
-<p>Menglong Zhu <a href="mailto:menglong@cis.upenn.edu">menglong@cis.upenn.edu</a>
-<a href="http://cis.upenn.edu/%7Emenglong">http://cis.upenn.edu/~menglong</a></p>
+<p>Menglong Zhu <a href="mailto:menglong@cis.upenn.edu">menglong@cis.upenn.edu</a></p>
+
+<p><a href="http://cis.upenn.edu/%7Emenglong">http://cis.upenn.edu/~menglong</a></p>
       </section>
     </div>
 
