Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ are within the size of 640x480.</p>
 
 <p>The annotations are in the /labels folder. The sequence annotations 
 include class label, coarse viewpoint, human 
-body joints, 2D bounding boxes, and training/testing 
-label. Each annotation is a separate mat file under /labels.</p>
+body joints, 2D bounding boxes and training/testing 
+label. Each annotation is a separate MATLAB .mat file under /labels.</p>
 
-<p>An example annotation looks like the following in MATLAB:</p>
+<p>An example annotation looks as follows in MATLAB:</p>
 
 <pre><code>annotation = 
 
@@ -108,9 +108,8 @@ bowling         jump_rope       squats
 <h2>
 <a name="annotation-tools" class="anchor" href="#annotation-tools"><span class="octicon octicon-link"></span></a>Annotation Tools</h2>
 
-<p>We made available the annotation tool used in creating this
-dataset. Please refer to <a href="http://dreamdragon.github.io/vatic/">http://dreamdragon.github.io/vatic/</a>
-for more details.</p>
+<p>The annotation tool used in creating this dataset is also available. 
+Please refer to <a href="http://dreamdragon.github.io/vatic/">http://dreamdragon.github.io/vatic/</a> for more details.</p>
 
 <h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
