Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ are within the size of 640x480.</p>
 
 <p>The annotations are in the /labels folder. The sequence annotations 
 include class label, coarse viewpoint, human 
-body joints, 2D bounding boxes and training/testing 
+body joints (2D locations and visibility), 2D bounding boxes and training/testing 
 label. Each annotation is a separate MATLAB .mat file under /labels.</p>
 
 <p>An example annotation looks as follows in MATLAB:</p>
