--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Penn Action : Action Dataset, with human body joints for all frames!" />
+    <meta name="description" content="Penn Action : Action Dataset with human body joints for all frames!" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/dreamdragon/PennAction">View on GitHub</a>
 
           <h1 id="project_title">Penn Action</h1>
-          <h2 id="project_tagline">Action Dataset, with human body joints for all frames!</h2>
+          <h2 id="project_tagline">Action Dataset with human body joints for all frames!</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/dreamdragon/PennAction/zipball/master">Download this project as a .zip file</a>
