Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ available for download via the following link:</p>
 
 <p><a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
 
+<p><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Action.png" alt=""></p>
+
+<p><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Keypoints.png" alt=""></p>
+
 <h2>
 <a name="reference" class="anchor" href="#reference"><span class="octicon octicon-link"></span></a>Reference</h2>
 
