--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ available for download via the following link:</p>
 
 <p><a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
 
-<p><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Action.png" alt=""></p>
+<p><a href="https://www.youtube.com/watch?v=RjlFNGINFwE"><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Action.png" alt=""></a></p>
 
-<p><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Keypoints.png" alt=""></p>
+<p><a href="https://www.youtube.com/watch?v=RjlFNGINFwE"><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Keypoints.png" alt=""></a></p>
 
 <h2>
 <a name="reference" class="anchor" href="#reference"><span class="octicon octicon-link"></span></a>Reference</h2>
