Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Penn Action : Action Dataset with human body joints for all frames!" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Penn Action : Action Dataset with human body joints for all frames!">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -37,9 +37,9 @@
 <p>Penn Action Dataset (University of Pennsylvania) contains 
 2326 video sequences of 15 different actions and human 
 joint annotations for each sequence. The dataset is 
-available for download via the following link:</p>
+available for <strong>download</strong> via the following link:</p>
 
-<p><a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
+<p><strong>Download:</strong> <a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
 
 <p><a href="https://www.youtube.com/watch?v=RjlFNGINFwE"><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Action.png" alt=""></a></p>
 
