Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="introducing-the-penn-action-dataset" class="anchor" href="#introducing-the-penn-action-dataset"><span class="octicon octicon-link"></span></a>Introducing the Penn Action Dataset</h2>
+<a id="introducing-the-penn-action-dataset" class="anchor" href="#introducing-the-penn-action-dataset" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introducing the Penn Action Dataset</h2>
 
 <p>Penn Action Dataset (University of Pennsylvania) contains 
 2326 video sequences of 15 different actions and human 
@@ -41,12 +41,15 @@ available for <strong>download</strong> via the following link:</p>
 
 <p><strong>Download:</strong> <a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
 
+<h2>
+<a id="dataset-at-a-glance" class="anchor" href="#dataset-at-a-glance" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataset At a Glance</h2>
+
 <p><a href="https://www.youtube.com/watch?v=RjlFNGINFwE"><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Action.png" alt=""></a></p>
 
 <p><a href="https://www.youtube.com/watch?v=RjlFNGINFwE"><img src="http://www.seas.upenn.edu/%7Emenglong/PennAction/Keypoints.png" alt=""></a></p>
 
 <h2>
-<a name="reference" class="anchor" href="#reference"><span class="octicon octicon-link"></span></a>Reference</h2>
+<a id="reference" class="anchor" href="#reference" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reference</h2>
 
 <p>If you use our dataset, please cite the following paper:</p>
 
@@ -56,7 +59,7 @@ International Conference on Computer Vision (ICCV). Dec 2013.
 </code></pre>
 
 <h2>
-<a name="dataset-content" class="anchor" href="#dataset-content"><span class="octicon octicon-link"></span></a>Dataset Content</h2>
+<a id="dataset-content" class="anchor" href="#dataset-content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataset Content</h2>
 
 <p>The dataset is organized in the following format:</p>
 
@@ -101,7 +104,7 @@ label. Each annotation is a separate MATLAB .mat file under /labels.</p>
 </code></pre>
 
 <h2>
-<a name="list-of-actions" class="anchor" href="#list-of-actions"><span class="octicon octicon-link"></span></a>List of Actions</h2>
+<a id="list-of-actions" class="anchor" href="#list-of-actions" aria-hidden="true"><span class="octicon octicon-link"></span></a>List of Actions</h2>
 
 <pre><code>baseball_pitch  clean_and_jerk  pull_ups  strumming_guitar  
 baseball_swing  golf_swing      push_ups  tennis_forehand   
@@ -110,13 +113,13 @@ bowling         jump_rope       squats
 </code></pre>
 
 <h2>
-<a name="annotation-tools" class="anchor" href="#annotation-tools"><span class="octicon octicon-link"></span></a>Annotation Tools</h2>
+<a id="annotation-tools" class="anchor" href="#annotation-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Annotation Tools</h2>
 
 <p>The annotation tool used in creating this dataset is also available. 
 Please refer to <a href="http://dreamdragon.github.io/vatic/">http://dreamdragon.github.io/vatic/</a> for more details.</p>
 
 <h2>
-<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>Please direct any questions regarding the dataset to</p>
 
