Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <a id="introducing-the-penn-action-dataset" class="anchor" href="#introducing-the-penn-action-dataset" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introducing the Penn Action Dataset</h2>
 
 <p>Penn Action Dataset (University of Pennsylvania) contains 
-2326 video sequences of 15 different actions and human 
-joint annotations for each sequence. The dataset is 
+2326 video sequences of 15 different actions and <strong>human 
+joint annotations</strong> for each sequence. The dataset is 
 available for <strong>download</strong> via the following link:</p>
 
 <p><strong>Download:</strong> <a href="https://upenn.box.com/PennAction">https://upenn.box.com/PennAction</a></p>
