Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@ bowling         jump_rope       squats
 </code></pre>
 
 <h2>
+<a id="list-of-annotated-joints" class="anchor" href="#list-of-annotated-joints" aria-hidden="true"><span class="octicon octicon-link"></span></a>List of Annotated Joints</h2>
+
+<pre><code>1.  head       
+2.  left_shoulder  3.  right_shoulder
+4.  left_elbow     5.  right_elbow
+6.  left_wrist     7.  right_wrist     
+8.  left_hip       9.  right_hip 
+10. left_knee      11. right_knee 
+12. left_ankle     13. right_ankle
+</code></pre>
+
+<h2>
 <a id="annotation-tools" class="anchor" href="#annotation-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Annotation Tools</h2>
 
 <p>The annotation tool used in creating this dataset is also available. 
